--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
         .old-english {
             font-family: 'UnifrakturMaguntia', cursive; /* More gothic Old English */
         }
+
+        /* Falling snow effect */
+        .snowflake {
+            position: absolute;
+            top: -10px;
+            color: white;
+            font-size: 1rem;
+            user-select: none;
+            pointer-events: none;
+            animation: fall linear infinite;
+        }
+        @keyframes fall {
+            to {
+                transform: translateY(100vh);
+            }
     </style>
 </head>
 <body>
