--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         }
 
         /* Safari-specific adjustments */
-        @supports (-webkit-touch-callout: none) {
-            h1 {
-                text-shadow: 0 0 5px rgba(255, 223, 0, 0.6) !important,
-                             0 0 10px rgba(255, 223, 0, 0.4) !important;
-            }
+        /* This will only apply if the `.safari` class is added to <html> by our JS */
+        .safari h1 {
+            text-shadow: 0 0 3px rgba(255, 223, 0, 0.5),
+                         0 0 6px rgba(255, 223, 0, 0.3) !important;
+            animation: none !important;
         }
 
         @keyframes sparkle {
@@ -80,6 +80,11 @@
 <body>
     <h1 class="old-english">Merry Christmas to All!!</h1>
     <script>
+        // Detect Safari and add a class to <html> if it's Safari
+        if (/^((?!chrome|android).)*safari/i.test(navigator.userAgent)) {
+            document.documentElement.classList.add('safari');
+        }
+
         // Snowflake generator
         const snowflakes = 50; // Number of snowflakes
         const body = document.body;
