change flex direction to column

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             height: 100vh;
             background: linear-gradient(to bottom, #4a69bd, #82ccdd);
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             overflow: hidden;
