--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
             snowflake.style.animationDuration = Math.random() * 5 + 5 + "s"; // Between 5s and 10s
             snowflake.style.fontSize = Math.random() * 1 + 1 + "rem"; // Between 1rem and 2rem
             snowflake.style.opacity = Math.random() * 0.8 + 0.2; // Opacity between 0.2 and 1
+            snowflake.style.animationDelay = Math.random() * 5 + "s";
             body.appendChild(snowflake);
         }
     </script>
