change countdown text

--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
             // Update the countdown text
             const countdownElement = document.getElementById('countdown');
             if (daysLeft > 1) {
-                countdownElement.textContent = `${daysLeft} Days Until Christmas!`;
+                countdownElement.textContent = `${daysLeft} days to go!`;
             } else if (daysLeft === 1) {
-                countdownElement.textContent = `1 Day Until Christmas!`;
+                countdownElement.textContent = `One more day!`;
             } else {
-                countdownElement.textContent = `Merry Christmas! 🎄`;
+                countdownElement.textContent = `🎄`;
             }
         }
 
