--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Random Abstract Background</title>
+    <title>Seasons Change</title>
     <!-- Tailwind CSS from CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- React + ReactDOM from CDN -->
@@ -27,21 +27,21 @@
         },
         {
           dayOfYear: 125, // ~ May 5 (Mid-Spring)
-          shapeCount: 10,
-          shapeColors: ["#FEE9B2", "#FDD880", "#FECFA7", "#FFD7D1", "#F8BFB3"],
-          backgroundColor: "#FFF9F0"
+          shapeCount: 20,
+          shapeColors: ["#FD75AA", "#FDFC75", "#75CBFD", "#BDFD75", "#FD759F"],
+          backgroundColor: "#92FD75"
         },
         {
           dayOfYear: 217, // ~ Aug 5 (Mid-Summer)
-          shapeCount: 3,
-          shapeColors: ["#FFE1A8", "#FFD53E", "#FFAB05", "#FF7A05", "#FF4205"],
-          backgroundColor: "#FFF3DF"
+          shapeCount: 6,
+          shapeColors: ["#FFFD31", "#00DF21", "#FFDE00", "#FFFC00", "#FF4205"],
+          backgroundColor: "#A3FCFE"
         },
         {
           dayOfYear: 309, // ~ Nov 5 (Mid-Fall)
-          shapeCount: 10,
-          shapeColors: ["#CC704B", "#D77D58", "#CB6E3D", "#E8A87C", "#CEA166"],
-          backgroundColor: "#FCECD1"
+          shapeCount: 13,
+          shapeColors: ["#FA980A", "#FA0A0A", "#AD4E00", "#FFDF08", "#FF8108"],
+          backgroundColor: "#FFE292"
         },
         {
           dayOfYear: 398, // 365 + 33 -> next year's mid-winter anchor
