--- a/public/ics2csv/index.html
+++ b/public/ics2csv/index.html
@@ -6,6 +6,7 @@
     <title>ICS → QuickBooks CSV Converter</title>
     <link rel="stylesheet" href="styles.css" />
     <script defer src="https://cdn.jsdelivr.net/npm/rrule@2.8.1/dist/es5/rrule.min.js"></script>
+    <script defer src="ics-core.js"></script>
     <script defer src="app.js"></script>
   </head>
   <body>
